fix WADL collapse but and touch css

--- a/src/main/resources/META-INF/resources/wadl/wadl.css
+++ b/src/main/resources/META-INF/resources/wadl/wadl.css
@@ -4,8 +4,9 @@
 .wadl.card-header { padding: .25rem 1.25rem .25rem 1.25rem !important; }
 .wadl-button { position: absolute; top: 0; left: 0; height: 100%; padding: .2em .5rem .2rem .75rem !important; width: 6em; color: #fff !important; border-bottom-right-radius: 0.25rem; }
 .wadl-label { margin-left: 6em; text-transform: capitalize !important; }
-/*URI is href blue*/
-.wadl-uri { font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace; color: #007bff !important; }
+/*URI is href blue, monospace, smaller, bold*/
+/*update 2020-01/22*/
+.wadl-uri { font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace; color: #007bff !important;font-size: 0.9rem !important;font-weight: 600 !important;}
 /*params are red*/
 .wadl-param { color: #dc3545 !important; }
 /*for markdown labels*/
